# wasm-minimal-protocol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  protocol.md  test_hello.sh  test_hello_zig.sh
.githooks/: pre-push
.github/workflows/: ci.yml  wasi-stub-release.yml
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/macro/tests/: test.rs
crates/wasi-stub/: Cargo.toml
crates/wasi-stub/src/: lib.rs  main.rs  parse_args.rs
examples/: hello.wasm
examples/hello/: Cargo.toml
examples/hello-zig/: hello.wasm  hello.zig
examples/hello/src/: lib.rs
examples/hello_c/: .gitignore  README.md  hello.c
examples/hello_go/: README.md  gen.sh  go.mod  go.sum  hello.go  hello.typ  hello.wasm
examples/hello_rust/: .gitignore  Cargo.toml  README.md  hello.typ
examples/hello_rust/src/: lib.rs
examples/hello_zig/: .gitignore  README.md  hello.typ  hello.zig
examples/host-rust-wasm/: Cargo.toml  hello.wasm
examples/host-rust-wasm/src/: main.rs
examples/host-wasmer/: Cargo.toml
examples/host-wasmer/src/: lib.rs  main.rs
examples/host-wasmi/: Cargo.toml
examples/host-wasmi/src/: lib.rs  main.rs
examples/host-wasmtime/: Cargo.toml
examples/host-wasmtime/src/: lib.rs  main.rs
examples/test-runner/: Cargo.toml
examples/test-runner/src/: main.rs
src/: lib.rs
tests/: test.rs
wasi-stub/: Cargo.toml  README.md
wasi-stub/src/: lib.rs  main.rs  parse_args.rs  parser_to_encoder.rs
