[package]
name = "wasm-minimal-protocol"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
	".",
	"./wasi-stub",
	"./examples/host-wasmer",
	"./examples/host-wasmtime",
	"./examples/host-wasmi",
	"./examples/test-runner",
]
default-members = ["."]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.28"
venial = "0.5.0"
