[package]
name = "host-wasmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = { version = "3.3.0", default-features = false, features = [
    "cranelift",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "3.3.0", default-features = false, features = [
    "js", "std"
] }