[package]
name = "host-wasmer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
wasmer-wasix = { version = "0.9.0", default-features = false, features = [
	"sys",
	"sys-thread",
	"host-reqwest",
] }
wasmer = { version = "4.0.0", default-features = false, features = [
	"cranelift",
] }
